--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@clerk/backend": "^1.3.0",
     "@clerk/nextjs": "^5.2.2",
+    "@hono/clerk-auth": "^2.0.0",
     "@neondatabase/serverless": "^0.9.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.50.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.2",
