--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,18 @@
 {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
-    "editor.wordWrap": "on",
-    "prettier.tabWidth": 2,
-    "editor.tabSize": 4,
-    "cSpell.words": [
-        "hono",
-        "lucide",
-        "neondatabase",
-        "nextjs",
-        "nocheck",
-        "tanstack",
-        "trpc"
-    ]
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "editor.wordWrap": "on",
+  "prettier.tabWidth": 2,
+  "editor.tabSize": 2,
+  "cSpell.words": [
+    "hono",
+    "lucide",
+    "neondatabase",
+    "nextjs",
+    "nocheck",
+    "paralleldrive",
+    "sonner",
+    "tanstack",
+    "trpc"
+  ]
 }
