--- a/package.json
+++ b/package.json
@@ -15,19 +15,24 @@
     "@clerk/backend": "^1.3.0",
     "@clerk/nextjs": "^5.2.2",
     "@hono/clerk-auth": "^2.0.0",
+    "@hono/zod-validator": "^0.2.2",
     "@neondatabase/serverless": "^0.9.4",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.50.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.2",
+    "drizzle-zod": "^0.5.1",
     "hono": "^4.4.12",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-use": "^17.5.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
