--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,11 @@
   "prettier.tabWidth": 2,
   "editor.tabSize": 2,
   "cSpell.words": [
+    "clsx",
     "hono",
     "hookform",
     "lucide",
+    "Milliunit",
     "neondatabase",
     "nextjs",
     "nocheck",
